feat: superadmin panel + deployment configuration
- Add superadmin lazy-loaded module (dashboard, stores management)
- Add SuperadminGuard and SuperadminService (no tenant header)
- Add backend endpoints: DELETE tenant, PATCH toggle-active, GET stats
- Move all secrets to environment variables with local fallbacks
- Add application-prod.properties for Railway production profile
- Update CorsConfig to read ALLOWED_ORIGINS from env var
- Add set-env.js to inject API_URL/MAPBOX_TOKEN at Angular build time
- Add vercel.json for SPA routing and production build command
- Add railway.toml for Spring Boot deployment config
- Add .gitignore protecting secrets, build output, and uploads

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>